# pdm-multirun

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
contributing/: index.html
coverage/: covindex.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_plugin_py.html  d_eedb086fbd210829_plugin_py.html  index.html  status.json
credits/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/pdm_multirun/: index.html
reference/pdm_multirun/debug/: index.html
reference/pdm_multirun/plugin/: index.html
search/: search_index.json
src/pdm_multirun/: __init__.py  debug.py  plugin.py
tests/: __init__.py  test_cli.py  test_plugin.py
